Issue #2868 New-BcImage with 21.0 and TestToolkit installed won't work without specifying license
Issue #2867 Compile-AppInBCContainer not using Application ID on downloading symbols
Issue #2865 NavSip.dll missing
Issue #2864 Flush-ContainerHelperCache unexpectedly removes an image
Issue #2760 Database connection string not used in New-BcContainerWizard on Azure VM

4.0.10
Issue #2842 Problems with 4.0.8 / 4.0.9 and Traefik
Issue #2844 Problems provisioning docker using aka.ms/getbcext templates (BcContainerHelper 4.0.9)

4.0.9
Experimental support for PowerShell 7, please report any issues on https://github.com/microsoft/navcontainerhelper/issues.
Experimantal support for running BcContainerHelper on Linux (only non-container stuff), please report any issues on https://github.com/microsoft/navcontainerhelper/issues.
Adding additional properties to telemetry. Set MicrosoftTelemetryConnectionString to an empty string in settings to opt-out.

4.0.8
Add parameter 'features' to Run-AlPipeline which allows for setting the compiler features 
Add SchemaSyncMode to Publish-PerTenantExtensionApps
Use submodules inside BcContainerHelper

4.0.7
Issue #2765 Unused param in Publish-BuildOutputToAzureFeed.ps1
Fix multiple layout files with same file name in BC21
Add parameter ContainerEventLogFile to Run-AlPipeline to extract container event log after run
Add new parameter to Run-TestsInBcContainer - renewClientContextBetweenTests to renew client context between tests
Add new parameter to New-BcImage - databaseBackupPath which allows selecting custom backup (in place of original backup from artifacts)
Add new setting renewClientContextBetweenTests as default value for the same parameter in Run-TestsInBcContainer
Change PR process for ContainerHelper
Wait for tenants to be ready after Restart-BcContainer
Issue #2798 Get-NavContainerSharedFolders returns error The length must not be less than 0 (zero)

4.0.6
Check latest allowed runtime version in Run-AlValidation